--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,4 +1,5 @@
 @font-face {
+font-display: swap;
 font-family: 'SEGA LOGO FONT';
 font-style: normal;
 font-weight: normal;
@@ -6,7 +7,7 @@ src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
 }
 
 h1{
-  font-family: 'SEGA LOGO FONT';
+  font-family: 'SEGA LOGO FONT';;
   font-size: 200px;
   color: #0ccac4;
   font-weight: 400;
